# ChangeLog for www-misc/surl
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  10 Aug 2007; Nathan Smith <ndansmith@gmail.com> surl-0.3.1.ebuild:
  Changed website

  29 Jun 2007; Nathan Smith (ndansmith) <ndansmith@gmail.com>
  -surl-0.3.ebuild, +surl-0.3.1.ebuild:
  Changed license to GNU GPL v.3, minor version bump

  09 Apr 2007; Nathan Smith (ndansmith) <ndansmith@gmail.com>
  surl-0.3.ebuild:
  Added ~x86-fbsd keyword

  12 Feb 2007; Nathan Smith (ndansmith) <ndansmith@gmail.com>
  surl-0.3.ebuild:
  Project moved to SourceForge

  25 Jan 2007; Nathan Smith (ndansmith) <ndansmith@gmail.com>
  +surl-0.3.ebuild, +metadata.xml:
  Changed name from turl to surl due to conflict with some similar software
