@@ -1,4 +1,4 @@
-DIST surl-0.3.1.tar.gz 14793 RMD160 1de7be9cd914af822e554d9bc407178d003df22f SHA1 ec3c51304abf90cba8e79bad116cd89f0befb033 SHA256 794702dbf4819beb500b200cf15aca5c586adc92ade5ace6d3f341e4afdd8bc2
-EBUILD surl-0.3.1.ebuild 406 RMD160 b109c7291085b939b854517e4f493102592ff2cc SHA1 ef0a225c0eb86d7073e41e8ccce44c73c0142db3 SHA256 5b99b9a83d8592a137daf82feb4092a7f5f5166e11e5aec2421b5a255782a79a
-MISC ChangeLog 753 RMD160 38fae76e5b2a19f6be8071a61b697e0e841f9599 SHA1 71ebba4407eb93d9a0358bc1295b2c47a500793f SHA256 f8bf48986c4f79c7429c6b404b1237b35106837a5c2445146efeeb59685cc81f
+DIST surl-1.2.tar.bz2 13207 RMD160 12180487993203df67b848eafd5913f543acb346 SHA1 90bcc67893348db0c5521d59b8169ef211e045be SHA256 d614842a4db242575171056d08621f655d6cfc1adb134e8f63ec390ad313829f
+EBUILD surl-1.2.ebuild 399 RMD160 d9b539de7ecffed84cf39374cc80d1edae6b1f68 SHA1 0a430a2c1864c1bc7b2b79f89ae6584211a422b8 SHA256 2c452f0ff88724f1b763148710b72bcdb979d690500d272e4a0235fcf6b24c40
+MISC ChangeLog 890 RMD160 4b05979e496e84567e3e3d78d0ff7de1770192ab SHA1 2fd3ce56c7fb4ff9bd2c58e62dfacd60d50f0203 SHA256 450d1effa2f59afd611460ab0d4b251261b4a4ff0d0f5807d8e4bae59d58dc0e
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
