@@ -1,12 +1,12 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
 inherit distutils
 
 DESCRIPTION="a command-line interface to http://metamark.net/"
-HOMEPAGE="http://ndan.ath.cx/surl"
-SRC_URI="mirror://sourceforge/${PN}/${P}.tar.gz"
+HOMEPAGE="http://sourceforge.net/projects/surl/"
+SRC_URI="mirror://sourceforge/${PN}/${P}.tar.bz2"
 
 LICENSE="GPL-3"
 SLOT="0"
@@ -16,5 +16,3 @@ IUSE=""
 DEPEND=""
 
 RDEPEND="${DEPEND}"
-
-S="${WORKDIR}/${PN}"
